--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <option>Schelude for later</option>
       </select>
       <button class="but1">Find Food</button>
-      <button class="but2"><a class="link" href="https://auth.uber.com/login/?breeze_local_zone=dca1&next_url=https%3A%2F%2Fwww.ubereats.com%2Flogin-redirect%2F%3Fcampaign%3Dsignin_universal_link%26marketing_vistor_id%3D83ceed43-7a01-4bc2-94a9-9203cfedd7a0%26redirect%3D%252F&state=hoYF0xkRBm6ZC6qkMcZ7IWmmkroVaW-9oAKeoDiFQrQ%3D&x-uber-analytics-session-id=f858a497-3535-49e1-88d5-2858552e7970">Sign In</a></button>
+      <button class="but2"><a class="link" href="#">Sign In</a></button>
    </div>
    <div class="textlink">
-     <p><a href="https://auth.uber.com/login/?breeze_local_zone=dca1&next_url=https%3A%2F%2Fwww.ubereats.com%2Flogin-redirect%2F%3Fcampaign%3Dsignin_universal_link%26marketing_vistor_id%3D83ceed43-7a01-4bc2-94a9-9203cfedd7a0%26redirect%3D%252F&state=hoYF0xkRBm6ZC6qkMcZ7IWmmkroVaW-9oAKeoDiFQrQ%3D&x-uber-analytics-session-id=f858a497-3535-49e1-88d5-2858552e7970">Sign In</a> for your recent addresses</p>
+     <p><a href="#">Sign In</a> for your recent addresses</p>
    </div>
    <div></div>
     
