fixed buttons and background

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <title>UberEats</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body class="back">
-<header>
+<body>
+<header> 
   <div class="background">
     <div class="text">
       <h4>Uber</h4>
     </div>
     <br>
       <div class="text2">
-      <p>Order your neighborhood's top spots</p>
+      <p><strong>Order your neighborhood's top spots</strong></p>
     </div>
     <div class="input-select">
       <input type="text" placeholder="Enter delivery adress">
@@ -25,7 +25,7 @@
       <button class="but2"><a class="link" href="#">Sign In</a></button>
    </div>
    <div class="textlink">
-     <p><a href="#">Sign In</a> for your recent addresses</p>
+     <p><strong><a href="#">Sign In</a> for your recent addresses</strong></p>
    </div>
    <div></div>
     
