--- a/index.html
+++ b/index.html
@@ -6,34 +6,24 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<header> 
-  <div class="background">
-    <div class="text">
-      <h4>Uber</h4>
-    </div>
-    <br>
-      <div class="text2">
-      <p><strong>Order your neighborhood's top spots</strong></p>
-    </div>
-    <div class="input-select">
-      <input type="text" placeholder="Enter delivery adress">
-      <select>
+<header>
+  <div class="block_heading">
+    <a href="#" class="heading">Uber</a>
+    <button class="login"><a href="#" class="sign_in">Sign in</a></button>
+  <div class="block_text">
+    <h1 class="text">Order your neighborhood's top spots</h1>
+    <div class="block_input">
+      <input type="text" class="address" placeholder="Enter delivery address">
+      <select class="select_delivery">
         <option>Deliver now</option>
         <option>Schelude for later</option>
       </select>
-      <button class="but1">Find Food</button>
-      <button class="but2"><a class="link" href="#">Sign In</a></button>
-   </div>
-   <div class="textlink">
-     <p><strong><a href="#">Sign In</a> for your recent addresses</strong></p>
-   </div>
-   <div></div>
-    
-
-
-
-
-
+      <button class="search">Find Food</button>   
+    <div class="block_textlink">
+      <p ><a href="#" class="textlink">Sign In</a> for your recent addresses</p>
+    </div>
+    </div>
+  </div>  
   </div>
 </header>
 </body>
