--- a/index.html
+++ b/index.html
@@ -200,48 +200,24 @@
         </div>
         </div>  
         <div class="footer-content__menu">
-          <div class="menu-list">
+          <nav class="menu-list">
             <ul>
-              <a href="#">
-              <li>Get Help</li>
-              </a>
-              <a href="#">
-               <li>Buy gift cards</li>
-              </a>
-              <a href="#">
-                <li>Add your restaurant</li>
-              </a>
-              <a href="#">
-                <li>Sign up to deliver</li>
-              </a>
-              <a href="#">
-                <li>Create a business account</li>
-              </a>
-              <a href="#">
-                <li>Save on your first order</li>
-              </a>
+                <li><a href="#">Get Help</a></li>          
+                <li><a href="#">Buy gift cards</a></li>
+                <li><a href="#">Add your restaurant</a></li>
+                <li><a href="#">Sign up to deliver</a></li>
+                <li><a href="#">Create a business account</a></li>
+                <li><a href="#">Save on your first order</a></li>
             </ul>
-          </div>
+          </nav>
           <div class="menu-list">
             <ul>
-              <a href="#">
-                <li>Restaurants near me</li>
-              </a>
-              <a href="#">
-                <li>View all cities</li>
-              </a>
-              <a href="#">
-                <li>View all countries</li>
-              </a>
-              <a href="#">
-                <li>Read our blog</li>
-              </a> 
-              <a href="#">
-                <li>About UberEats</li>
-              </a>
-              <a href="#">
-                <li>Language</li>
-              </a>
+                <li><a href="#">Restaurants near me</a></li>
+                <li><a href="#">View all cities</a></li>
+                <li><a href="#">View all countries</a></li>
+                <li><a href="#">Read our blog</a></li>
+                <li><a href="#">About UberEats</a></li>
+                <li><a href="#">Language</a></li>
             </ul>
           </div>
         </div>
