--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <title>UberEats</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-
   <link rel="apple-touch-icon" sizes="120x120" href="css/picture/Favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="css/picture/Favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="css/picture/Favicon/favicon-16x16.png">
@@ -17,95 +16,87 @@
 
 <body>
   <header class="header">
-    <div class="container">
-      <div class="header-top">
-        <div class="header-top__content">
-          <div class="head-content__menu-logo">
-            <a class="menu" href="#">&#9776</a>
-            <a class="logo" href="#">Uber</a>
+    <div class="header-top">
+      <div class="header-top__content">
+        <div class="head-content__menu-logo">
+          <div class="menu">
+            <button class="button-menu" href="#">
+              <img class="image-menu" src="css/picture/menu.button.svg">
+            </button>
           </div>
-          <div class="head-content__link-login">
-            <a class="link-login" href="#">Sign in</a>
+          <div class="logo">
+            <a class="link-logo" href="#">Uber</a>
           </div>
+        </div>
+        <div class="head-content__link-login">
+          <a class="link-login" href="#">Sign in</a>
         </div>
       </div>
-      <div class="header-subtitle">
-        <h1 class="subtitle__text">Order your neighborhood's top spots</h1>
+    </div>
+    <div class="header-title">
+      <h1 class="title__text">Order your neighborhood's top spots</h1>
+      <div class="header-search">
+        <form class="header-search__form">
+          <div class="header-search__input">
+            <svg class="location-icon" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="map-marker-alt"
+              class="svg-inline--fa fa-map-marker-alt fa-w-12" role="img" xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 384 512">
+              <path fill="currentColor"
+                d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z">
+              </path>
+            </svg>
+            <input class="input" type="text" placeholder="Enter delivery address">
+          </div>
+          <div class="header-search__select-clock">
+            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas"
+              data-icon="clock" class="clock-icon" role="img" viewBox="0 0 512 512">
+              <path fill="currentColor"
+                d="M256,8C119,8,8,119,8,256S119,504,256,504,504,393,504,256,393,8,256,8Zm92.49,313h0l-20,25a16,16,0,0,1-22.49,2.5h0l-67-49.72a40,40,0,0,1-15-31.23V112a16,16,0,0,1,16-16h32a16,16,0,0,1,16,16V256l58,42.5A16,16,0,0,1,348.49,321Z" />
+            </svg>
+            <select class="select">
+              <option>Deliver now</option>
+              <option>Schelude for later</option>
+            </select>
+          </div>
+          <div class="header-search__button">
+            <button class="button">Find Food</button>
+          </div>
+        </form>
       </div>
-      <form class="header-search">
-        <div class="header-search__input-place">
-          <input class="input" type="text" placeholder="Enter delivery address">
-        </div>
-        <div class="header-search__select-place">
-          <select class="select">
-            <option>Deliver now</option>
-            <option>Schelude for later</option>
-          </select>
-        </div>
-        <div class="header-search__button-place">
-          <button class="button">Find Food</button>
-        </div>
-      </form>
       <div class="header-textlink">
         <p><a href="#" class="textlink">Sign In</a> for your recent addresses</p>
       </div>
     </div>
   </header>
-  <section class="section-images">
-    <div class="container">
-      <div class="section-links">
-        <div class="section-links__items">
-          <div class="item-link">
+  <main class="main-content">
+    <section class="section-information">
+      <div class="container__info-links">
+        <div class="info-links">
+          <div class="info-links__image">
             <a href="#">
-              <div class="image">
-                <img src="css/picture/picture1.jpg">
-                <div class="item-text">
-                  <div class="item-title">
-                    <p>Feed your employees</p>
-                  </div>
-                  <div class="item-subtitle">
-                    <p>Create a business account</p>
-                  </div>
-                </div>
-              </div>
+              <img class="image" src="css/picture/picture1.jpg">
+              <p class="image-title">Feed your employees</p>
+              <p class="image-subtitle">Create a business account</p>
             </a>
           </div>
-          <div class="item-link">
+          <div class="info-links__image">
             <a href="#">
-              <div class="image">
-                <img src="css/picture/picture2.jpg">
-                <div class="item-text">
-                  <div class="item-title">
-                    <p>Your restaurant,delivered</p>
-                  </div>
-                  <div class="item-subtitle">
-                    <p>Add your restaurant</p>
-                  </div>
-                </div>
-              </div>
+              <img class="image" src="css/picture/picture2.jpg">
+              <p class="image-title">Your restaurant,delivered</p>
+              <p class="image-subtitle">Add your restaurant</p>
             </a>
           </div>
-          <div class="item-link">
+          <div class="info-links__image">
             <a href="#">
-              <div class="image">
-                <img src="css/picture/picture3.jpg">
-                <div class="item-text">
-                  <div class="item-title">
-                    <p>Deliver with Uber Eats</p>
-                  </div>
-                  <div class="item-subtitle">
-                    <p>Sign up to deliver</p>
-                  </div>
-                </div>
-              </div>
+              <img class="image" src="css/picture/picture3.jpg">
+              <p class="image-title">Deliver with Uber Eats</p>
+              <p class="image-subtitle">Sign up to deliver</p>
             </a>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="section-map">
-    <div class="container">
+    </section>
+    <section class="section-map">
       <div class="google-map">
         <div class="google-map__map-title">
           <h2 class="title">Cities near me</h2>
@@ -117,11 +108,9 @@
             width="100%" height="450" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="section-areas">
-    <div class="container">
-      <div class="section-areas__columns">
+    </section>
+    <section class="section-areas">
+      <div class="areas-columns">
         <div class="column">
           <a href="#">Donetsk</a>
           <a href="#">Luhansk</a>
@@ -155,14 +144,10 @@
           <a href="#">Lutsk</a>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="section-countries">
-    <div class="container">
-      <div class="section-countries__columns">
-        <div class="country-title">
-          <h2 class="title">Countries with Uber Eats</h2>
-        </div>
+    </section>
+    <section class="section-countries">
+      <div class="countries-columns">
+        <h2 class="title">Countries with Uber Eats</h2>
         <div class="countries">
           <div class="column">
             <a href="#">United States</a>
@@ -198,71 +183,70 @@
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
   <footer class="footer">
     <div class="footer-bg">
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-content__logo-images">
-            <a href="#" class="logo">Uber</a>
-            <div class="icons">
-              <a href="#">
-                <img src="css/picture/app_store_icon.png">
-              </a>
-              <a href="#">
-                <img src="css/picture/google_play_icon.png">
-              </a>
-            </div>
-          </div>
-          <div class="footer-content__menu">
-            <nav class="menu-list">
-              <ul>
-                <li><a href="#">Get Help</a></li>
-                <li><a href="#">Buy gift cards</a></li>
-                <li><a href="#">Add your restaurant</a></li>
-                <li><a href="#">Sign up to deliver</a></li>
-                <li><a href="#">Create a business account</a></li>
-                <li><a href="#">Save on your first order</a></li>
-              </ul>
-            </nav>
-            <div class="menu-list">
-              <ul>
-                <li><a href="#">Restaurants near me</a></li>
-                <li><a href="#">View all cities</a></li>
-                <li><a href="#">View all countries</a></li>
-                <li><a href="#">Read our blog</a></li>
-                <li><a href="#">About UberEats</a></li>
-                <li><a href="#">Language</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="footer-space">
-          <hr>
-        </div>
-        <div class="footer-content__bottom">
-          <div class="social-network">
+      <div class="footer-content">
+        <div class="footer-content__logo">
+          <a href="#" class="link-logo">Uber</a>
+          <div class="download-link">
             <a href="#">
-              <img class="icon" src="css/picture/facebook.png">
+              <img src="css/picture/app_store_icon.png">
             </a>
             <a href="#">
-              <img class="icon" src="css/picture/twitter.png">
-            </a>
-            <a href="#">
-              <img class="icon" src="css/picture/instagram.png">
+              <img src="css/picture/google_play_icon.jpg">
             </a>
           </div>
-          <div class="bottom-content">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms</a>
-            <a href="#">Pricing</a>
-            <a href="#">Do not sell my info(California)</a>
-          </div>
         </div>
-        <div class="footer-license">
-          <p>© 2021 Uber Technologies Inc</p>
+        <div class="footer-content__menu">
+          <nav class="menu-list">
+            <ul>
+              <li><a href="#">Get Help</a></li>
+              <li><a href="#">Buy gift cards</a></li>
+              <li><a href="#">Add your restaurant</a></li>
+              <li><a href="#">Sign up to deliver</a></li>
+              <li><a href="#">Create a business account</a></li>
+              <li><a href="#">Save on your first order</a></li>
+            </ul>
+          </nav>
+          <nav class="menu-list">
+            <ul>
+              <li><a href="#">Restaurants near me</a></li>
+              <li><a href="#">View all cities</a></li>
+              <li><a href="#">View all countries</a></li>
+              <li><a href="#">Read our blog</a></li>
+              <li><a href="#">About UberEats</a></li>
+              <li><a href="#">Language</a></li>
+            </ul>
+          </nav>
         </div>
+      </div>
+      <div class="footer-space">
+        <hr>
+      </div>
+      <div class="footer-content__bottom">
+        <div class="social-network">
+          <a href="" class="social-link">
+            <img class="social-icon" src="css/picture/instagram.svg" alt="instagram-icon">
+          </a>
+          <a href="" class="social-link">
+            <img class="social-icon" src="css/picture/facebook.svg" alt="facebook-icon">
+          </a>
+          <a href="" class="social-link">
+            <img class="social-icon" src="css/picture/twitter.svg" alt="twitter-icon">
+          </a>
+          </ul>
+        </div>
+        <div class="bottom-content">
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms</a>
+          <a href="#">Pricing</a>
+          <a href="#">Do not sell my info(California)</a>
+        </div>
+      </div>
+      <div class="license">
+        <p>© 2021 Uber Technologies Inc</p>
       </div>
     </div>
   </footer>
