--- a/index.html
+++ b/index.html
@@ -33,42 +33,44 @@
         </div>
       </div>
     </div>
-    <div class="header-title">
-      <h1 class="title__text">Order your neighborhood's top spots</h1>
-      <div class="header-search">
-        <form class="header-search__form">
-          <div class="header-search__input">
-            <svg class="location-icon" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="map-marker-alt"
-              class="svg-inline--fa fa-map-marker-alt fa-w-12" role="img" xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 384 512">
-              <path fill="currentColor"
-                d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z">
-              </path>
-            </svg>
-            <input class="input" type="text" placeholder="Enter delivery address">
-          </div>
-          <div class="header-search__select-clock">
-            <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas"
-              data-icon="clock" class="clock-icon" role="img" viewBox="0 0 512 512">
-              <path fill="currentColor"
-                d="M256,8C119,8,8,119,8,256S119,504,256,504,504,393,504,256,393,8,256,8Zm92.49,313h0l-20,25a16,16,0,0,1-22.49,2.5h0l-67-49.72a40,40,0,0,1-15-31.23V112a16,16,0,0,1,16-16h32a16,16,0,0,1,16,16V256l58,42.5A16,16,0,0,1,348.49,321Z" />
-            </svg>
-            <select class="select">
-              <option>Deliver now</option>
-              <option>Schelude for later</option>
-            </select>
-          </div>
-          <div class="header-search__button">
-            <button class="button">Find Food</button>
-          </div>
-        </form>
-      </div>
-      <div class="header-textlink">
-        <p><a href="#" class="textlink">Sign In</a> for your recent addresses</p>
-      </div>
-    </div>
   </header>
   <main class="main-content">
+    <section class="section-form">
+      <div class="title-form">
+        <h1 class="title-text">Order your neighborhood's top spots</h1>
+        <div class="search">
+          <form class="search__form">
+            <div class="search__input">
+              <svg class="location-icon" aria-hidden="true" focusable="false" data-prefix="fas"
+                data-icon="map-marker-alt" class="svg-inline--fa fa-map-marker-alt fa-w-12" role="img"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                <path fill="currentColor"
+                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z">
+                </path>
+              </svg>
+              <input class="input" type="text" placeholder="Enter delivery address">
+            </div>
+            <div class="search__select-clock">
+              <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas"
+                data-icon="clock" class="clock-icon" role="img" viewBox="0 0 512 512">
+                <path fill="currentColor"
+                  d="M256,8C119,8,8,119,8,256S119,504,256,504,504,393,504,256,393,8,256,8Zm92.49,313h0l-20,25a16,16,0,0,1-22.49,2.5h0l-67-49.72a40,40,0,0,1-15-31.23V112a16,16,0,0,1,16-16h32a16,16,0,0,1,16,16V256l58,42.5A16,16,0,0,1,348.49,321Z" />
+              </svg>
+              <select class="select">
+                <option>Deliver now</option>
+                <option>Schelude for later</option>
+              </select>
+            </div>
+            <div class="header-search__button">
+              <button class="button">Find Food</button>
+            </div>
+          </form>
+        </div>
+        <div class="form-textlink">
+          <p><a href="#" class="textlink">Sign In</a> for your recent addresses</p>
+        </div>
+      </div>
+    </section>
     <section class="section-information">
       <div class="container__info-links">
         <div class="info-links">
