--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>UberEats</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="stylesheet" href="css/media-queries.css">
+  <link rel="stylesheet" href="css/grid-media.css">
   <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="120x120" href="css/picture/Favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="css/picture/Favicon/favicon-32x32.png">
@@ -38,11 +38,11 @@
   </header>
   <main class="main-content">
     <section class="section-form">
-      <div class="title-form">
-        <h1 class="title-text">Order</h1>
-        <div class="search">
-          <form class="search__form">
-            <div class="search__input">
+      <div class="title-form row">
+        <h1 class="title-text col-lg-6 col-md-9 col-sm-9 col-xs-9">Order</h1>
+        <div class="search col-lg-6 col-md-6 col-sm-6 col-xs-8">
+          <form class="search__form col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="search__input col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <svg class="location-icon" aria-hidden="true" focusable="false" data-prefix="fas"
                 data-icon="map-marker-alt" class="svg-inline--fa fa-map-marker-alt fa-w-12" role="img"
                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
@@ -50,47 +50,48 @@
                   d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z">
                 </path>
               </svg>
-              <input class="input" type="text" placeholder="Enter delivery address">
+              <input class="input col-lg-12 col-md-12 col-sm-12 col-xs-12" type="text"
+                placeholder="Enter delivery address">
             </div>
-            <div class="search__select-clock">
+            <div class="search__select-clock col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas"
                 data-icon="clock" class="clock-icon" role="img" viewBox="0 0 512 512">
                 <path fill="currentColor"
                   d="M256,8C119,8,8,119,8,256S119,504,256,504,504,393,504,256,393,8,256,8Zm92.49,313h0l-20,25a16,16,0,0,1-22.49,2.5h0l-67-49.72a40,40,0,0,1-15-31.23V112a16,16,0,0,1,16-16h32a16,16,0,0,1,16,16V256l58,42.5A16,16,0,0,1,348.49,321Z" />
               </svg>
-              <select class="select">
+              <select class="select col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <option>Deliver now</option>
                 <option>Schelude for later</option>
               </select>
             </div>
-            <div class="header-search__button">
-              <button class="button">Find Food</button>
+            <div class="header-search__button col-lg-12 col-md-12 col-sm-12 col-xs-12">
+              <button class="button col-lg-12 col-md-12 col-sm-12 col-xs-12">Find Food</button>
             </div>
           </form>
         </div>
-        <div class="form-textlink">
+        <div class="form-textlink col-12 col-lg-6">
           <p><a href="#" class="textlink">Sign In</a> for your recent addresses</p>
         </div>
       </div>
     </section>
     <section class="section-information">
       <div class="container__info-links">
-        <div class="info-links">
-          <div class="info-links__image">
+        <div class="info-links row">
+          <div class="info-links__image col-lg-4 col-md-12 col-sm-12">
             <a href="#">
               <img class="image" src="css/picture/picture1.jpg">
               <p class="image-title">Feed your employees</p>
               <p class="image-subtitle">Create a business account</p>
             </a>
           </div>
-          <div class="info-links__image">
+          <div class="info-links__image col-lg-4 col-md-12 col-sm-12">
             <a href="#">
               <img class="image" src="css/picture/picture2.jpg">
               <p class="image-title">Your restaurant,delivered</p>
               <p class="image-subtitle">Add your restaurant</p>
             </a>
           </div>
-          <div class="info-links__image">
+          <div class="info-links__image col-lg-4 col-md-12 col-sm-12">
             <a href="#">
               <img class="image" src="css/picture/picture3.jpg">
               <p class="image-title">Deliver with Uber Eats</p>
@@ -114,8 +115,8 @@
       </div>
     </section>
     <section class="section-areas">
-      <div class="areas-columns">
-        <div class="column">
+      <div class="areas-columns row">
+        <div class="column col-lg-3 col-md-3 col-sm-6">
           <a href="#">Donetsk</a>
           <a href="#">Luhansk</a>
           <a href="#">Vinnytsia</a>
@@ -123,7 +124,7 @@
           <a href="#">Kharkiv</a>
           <a href="#">Kherson</a>
         </div>
-        <div class="column">
+        <div class="column col-lg-3 col-md-3 col-sm-12">
           <a href="#">Zhytomyr</a>
           <a href="#">Uzhhorod</a>
           <a href="#">Zaporizhzhia</a>
@@ -131,7 +132,7 @@
           <a href="#">Khmelnytskyi</a>
           <a href="#">Cherkasy</a>
         </div>
-        <div class="column col-for-small-screen">
+        <div class="column col-lg-3 col-md-3 col-for-small-screen">
           <a href="#">Kyiv</a>
           <a href="#">Lviv</a>
           <a href="#">Mykolaiv</a>
@@ -139,7 +140,7 @@
           <a href="#">Chernihiv</a>
           <a href="#">Chernivtsi</a>
         </div>
-        <div class="column col-for-small-screen">
+        <div class="column col-lg-3 col-md-3 col-for-small-screen">
           <a href="#">Poltava</a>
           <a href="#">Rivne</a>
           <a href="#">Sumy</a>
@@ -152,8 +153,8 @@
     <section class="section-countries">
       <div class="countries-columns">
         <h2 class="title">Countries with Uber Eats</h2>
-        <div class="countries">
-          <div class="column">
+        <div class="countries row">
+          <div class="column col-lg-3 col-md-3 col-sm-12">
             <a href="#">United States</a>
             <a href="#">Spain</a>
             <a href="#">Brazil</a>
@@ -161,7 +162,7 @@
             <a href="#">France</a>
             <a href="#">Japan</a>
           </div>
-          <div class="column">
+          <div class="column col-lg-3 col-md-3 col-sm-12">
             <a href="#">Canada</a>
             <a href="#">Australia</a>
             <a href="#">Poland</a>
@@ -169,7 +170,7 @@
             <a href="#">Italy</a>
             <a href="#">Portugal</a>
           </div>
-          <div class="column col-for-small-screen">
+          <div class="column col-lg-3 col-md-3 col-for-small-screen">
             <a href="#">Switzerland</a>
             <a href="#">Chile</a>
             <a href="#">New Zelandia</a>
@@ -177,7 +178,7 @@
             <a href="#">South Africa</a>
             <a href="#">Belgium</a>
           </div>
-          <div class="column col-for-small-screen">
+          <div class="column col-lg-3 col-md-3 col-for-small-screen">
             <a href="#">Ecuador</a>
             <a href="#">Ireland</a>
             <a href="#">Sri Lanka</a>
@@ -191,20 +192,20 @@
   </main>
   <footer class="footer">
     <div class="footer-bg">
-      <div class="footer-content">
-        <div class="footer-content__logo">
+      <div class="footer-content row">
+        <div class="footer-content__logo col-lg-6 col-md-12 col-sm-12">
           <a href="#" class="link-logo link-logo-footer">Uber</a>
-          <div class="download-link">
-            <a href="#">
+          <div class="download-link col-lg-12">
+            <a class="col-lg-4" href="#">
               <img src="css/picture/app_store_icon.png">
             </a>
-            <a href="#">
+            <a class="col-lg-4" href="#">
               <img src="css/picture/google_play_icon.jpg">
             </a>
           </div>
         </div>
-        <div class="footer-content__menu">
-          <nav class="menu-list menu-list-small-screen">
+        <div class="footer-content__menu col-lg-6 col-md-12 col-sm-12">
+          <nav class="menu-list menu-list-small-screen col-lg-6 col-md-6 col-sm-6">
             <ul>
               <li><a href="#">Get Help</a></li>
               <li><a href="#">Buy gift cards</a></li>
@@ -214,7 +215,7 @@
               <li><a href="#">Save on your first order</a></li>
             </ul>
           </nav>
-          <nav class="menu-list">
+          <nav class="menu-list col-lg-6 col-md-6 col-sm-6">
             <ul>
               <li><a href="#">Restaurants near me</a></li>
               <li><a href="#">View all cities</a></li>
@@ -229,28 +230,28 @@
       <div class="footer-space">
         <hr>
       </div>
-      <div class="footer-content__bottom">
-        <div class="social-network">
-          <a href="" class="social-link">
+      <div class="footer-content__bottom col-12 col-lg-12 col-md-12 col-sm-12">
+        <div class="social-network col-1   col-lg-2 col-md-2 col-sm-2">
+          <a href="" class="social-link col-sm-12">
             <img class="social-icon" src="css/picture/instagram.svg" alt="instagram-icon">
           </a>
-          <a href="" class="social-link">
+          <a href="" class="social-link col-sm-12">
             <img class="social-icon" src="css/picture/facebook.svg" alt="facebook-icon">
           </a>
-          <a href="" class="social-link">
+          <a href="" class="social-link col-sm-12">
             <img class="social-icon" src="css/picture/twitter.svg" alt="twitter-icon">
           </a>
           </ul>
         </div>
-        <div class="bottom-content">
-          <a class="bottom-content-link" href="#">Privacy Policy</a>
-          <a class="bottom-content-link" href="#">Terms</a>
-          <a class="bottom-content-link" href="#">Pricing</a>
-          <a class="bottom-content-link" href="#">Do not sell my info(California)</a>
+        <div class="bottom-content col-8 col-lg-9 col-md-12 col-sm-12">
+          <a class="bottom-content-link col-5 col-lg-10 col-md-2 col-sm-3" href="#">Privacy Policy</a>
+          <a class="bottom-content-link col-3 col-lg-10 col-md-2 col-sm-3" href="#">Terms</a>
+          <a class="bottom-content-link col-3 col-lg-10 col-md-2 col-sm-3" href="#">Pricing</a>
+          <a class="bottom-content-link col-9 col-lg-10 col-md-7 col-sm-7" href="#">Do not sell my info(California)</a>
           <p class="license-for-small-screen">© 2021 Uber Technologies Inc</p>
         </div>
       </div>
-      <p class="license">© 2021 Uber Technologies Inc</p>
+      <p class="license col-12 col-lg-12">© 2021 Uber Technologies Inc</p>
     </div>
   </footer>
 </body>
